--- a/styles/global.scss
+++ b/styles/global.scss
@@ -7,6 +7,8 @@
 }
 html {
   box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: #204483 #090e20;
 }
 body.ReactModal__Body--open {
   overflow: hidden;
@@ -89,6 +91,7 @@ button {
   display: inline-block;
   font-family: inherit;
   text-decoration: none;
+  font-size: 0.8rem;
   outline: 0;
   cursor: pointer;
   border-radius: 2rem;
@@ -131,18 +134,20 @@ header {
   > a {
     display: flex;
     align-items: center;
-    padding: 0 0 0 1.2rem;
+    border-bottom: var(--border);
+
     &:hover {
       text-decoration: none;
     }
   }
 
   .logo {
-    display: none;
+    // display: none;
     // max-width: 40px;
     color: #fff;
     font-size: 1.4rem;
     margin: 0 auto;
+    padding: 1.5rem 0;
   }
 }
 
@@ -153,6 +158,7 @@ nav.main {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   text-align: center;
+  padding: 0.5rem 0;
 
   i {
     font-size: 1.4rem;
@@ -318,8 +324,8 @@ nav.project-cat {
 
   .btn,
   button {
-    padding: 0.8rem 1.8rem;
-    font-size: 1.2rem;
+    // padding: 0.8rem 1.8rem;
+    font-size: 1rem;
   }
 
   header {
@@ -327,8 +333,11 @@ nav.project-cat {
     padding: 0.5rem 0;
     justify-content: space-between;
 
+    a {
+      border: 0;
+    }
     .logo {
-      display: inline-block;
+      padding: 0 0 0 0.5rem;
     }
   }
 
@@ -336,6 +345,7 @@ nav.project-cat {
   nav.main {
     background: none;
     border: 0;
+    padding: 0;
     a {
       display: flex;
       align-items: center;
@@ -359,6 +369,13 @@ nav.project-cat {
 }
 
 @media (min-width: 992px) {
+  header {
+    .logo {
+      display: inline-block;
+      padding-left: 1.2rem;
+    }
+  }
+
   nav.project-cat {
     width: 180px;
 
@@ -664,9 +681,9 @@ p.date {
 .icon-code:before {
   content: "\ea80";
 }
-
 ::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
   background: #090e20;
   padding: 6px;
 }
