--- a/styles/global.scss
+++ b/styles/global.scss
@@ -134,7 +134,6 @@ header {
   > a {
     display: flex;
     align-items: center;
-    border-bottom: var(--border);
 
     &:hover {
       text-decoration: none;
@@ -142,12 +141,11 @@ header {
   }
 
   .logo {
-    // display: none;
+    display: none;
     // max-width: 40px;
     color: #fff;
     font-size: 1.4rem;
     margin: 0 auto;
-    padding: 1.5rem 0;
   }
 }
 
@@ -276,7 +274,7 @@ nav.project-cat {
 
     h3 {
       margin-bottom: 0;
-      font-size: 0.8rem;
+      font-size: 0.7rem;
       font-weight: normal;
     }
   }
@@ -470,15 +468,23 @@ nav.project-cat {
 .back {
   background: #11172e;
   border-bottom: 1px solid #1d294a;
-  color: white;
   padding: 1rem;
   font-size: 1.2rem;
   display: flex;
   align-items: center;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
 .back i {
   margin-right: 10px;
   cursor: pointer;
+  color: #fff;
+}
+.back p {
+  color: #fff;
+  margin: 0;
 }
 .modal-content {
   padding: 1rem;
