update project grid layout

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -221,61 +221,64 @@ nav.project-cat {
 
 /* project list */
 .projects-list {
-  padding: 1rem;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 1.2rem;
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
 
-  figure {
-    overflow: hidden;
+  article {
+    flex: 0 0 auto;
+    width: 50%;
     position: relative;
-    margin: 0;
-    padding: 0;
-    border-radius: 0.6rem;
-    border: var(--border);
-  }
 
-  .thumbnail {
-    position: relative;
-    overflow: hidden;
+    background-size: cover;
 
-    background: var(--darkblue);
-    height: 150px;
+    &:before {
+      content: "";
+      display: block;
+      margin-top: 100%;
+    }
 
-    div {
+    a {
       position: absolute;
-      width: 100%;
-      height: 100% !important;
-    }
-  }
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      display: block;
+      padding: 0.4rem;
 
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+      figure {
+        border-radius: 0.5rem;
+        overflow: hidden;
+        position: relative;
+        background: #11172e;
+        border: var(--border);
 
-  .details {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    padding: 2rem 1rem 1rem;
-    background: linear-gradient(0deg, #000000b8, transparent);
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+        img {
+          width: 100%;
+          height: auto;
+          display: block;
+          position: relative;
+          z-index: 1;
+        }
 
-    span {
-      display: flex;
-      column-gap: 0.5rem;
-      font-size: 1rem;
-    }
+        .details {
+          position: absolute;
+          bottom: 0;
+          width: 100%;
+          padding: 2rem 1rem 1rem;
+          background: linear-gradient(0deg, #000000eb, transparent);
+          color: #fff;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          z-index: 1;
 
-    h3 {
-      margin-bottom: 0;
-      font-size: 0.7rem;
-      font-weight: normal;
+          p {
+            font-size: 0.8rem;
+          }
+        }
+      }
     }
   }
 }
@@ -294,27 +297,6 @@ nav.project-cat {
 	MEDIA QUERIES
 \*------------------------------------*/
 
-/* media query */
-@media (min-width: 400px) {
-  .projects-list .thumbnail {
-    height: 180px;
-  }
-}
-@media (min-width: 540px) {
-  .projects-list .thumbnail {
-    height: 240px;
-  }
-}
-@media (min-width: 620px) {
-  .projects-list {
-    .thumbnail {
-      height: 260px;
-    }
-    .details h3 {
-      font-size: 1rem;
-    }
-  }
-}
 @media (min-width: 768px) {
   body {
     font-size: 18px;
@@ -362,7 +344,9 @@ nav.project-cat {
   }
 
   .projects-list {
-    grid-template-columns: repeat(3, 1fr);
+    article {
+      width: 25%;
+    }
   }
 }
 
@@ -392,29 +376,28 @@ nav.project-cat {
       font-size: 0.8rem;
     }
   }
-
-  .projects-list {
-    grid-template-columns: repeat(4, 1fr);
-    .thumbnail {
-      height: 220px;
-    }
-  }
 }
 
 @media (min-width: 1200px) {
   .projects-list {
-    grid-template-columns: repeat(5, 1fr);
-    .thumbnail {
-      height: 240px;
+    article {
+      width: 20%;
     }
   }
 }
 
-@media (min-width: 1600px) {
+@media (min-width: 1680px) {
   .projects-list {
-    grid-template-columns: repeat(6, 1fr);
-    .thumbnail {
-      height: 300px;
+    article {
+      width: 16.666667%;
+    }
+  }
+}
+
+@media (min-width: 1920px) {
+  .projects-list {
+    article {
+      width: 14.285714286%;
     }
   }
 }
