Replace image preloader with a Shimmer effect

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -355,6 +355,7 @@ section.about {
         position: relative;
         background: #11172e;
         border: var(--border);
+        height: 100%;
 
         img {
           width: 100%;
